Add additional restapi methods
